log/build_2025-03-27_12-12-19/robot_control/stderr.log
  File "/home/mo/Thesis/install/robot_control/lib/python3.8/site-packages/robot_control/scan_bar_horizontal_triangulation.py", line 559
    tip_point = xyz_tip_in_workframe.flatten().tolist())
    ^
SyntaxError: invalid syntax

